src/test/resources/wacc_examples/invalid/syntaxErr/classes/nestedClass.wacc
# second class declared inside first

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  class c {
    class b {
    }
  }
end
